--- a/package.json
+++ b/package.json
@@ -7,26 +7,26 @@
   },
   "dependencies": {
     "aws-sdk": "~2.149.0",
+    "bcrypt": "~1.0.3",
     "body-parser": "~1.16.0",
+    "connect-dynamodb": "~2.0.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.0",
     "express": "~4.14.1",
-    "jade": "~1.11.0",
+    "express-session": "~1.15.6",
+    "lodash": "~4.17.4",
     "mocha": "~3.0.0",
     "morgan": "~1.7.0",
+    "pug": "^2.0.0-rc.4",
     "react": "~16.1.0",
     "react-dom": "~16.1.0",
-    "serve-favicon": "~2.3.2",
-    "express-session": "~1.15.6",
-    "connect-dynamodb": "~2.0.0",
-    "bcrypt": "~1.0.3",
-    "lodash": "~4.17.4"
+    "serve-favicon": "~2.3.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "1.6.1",
     "babel-preset-react": "^6.24.1",
     "html-webpack-plugin": "^2.30.1",
     "webpack": "^3.8.1"
