--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-preset-env": "1.6.1",
     "babel-preset-react": "^6.24.1",
     "html-webpack-plugin": "^2.30.1",
-    "webpack": "^3.8.1"
+    "webpack": "^3.8.1",
+    "jquery": "~3.2.1"
   }
 }
