--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "1.6.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.7",
     "html-webpack-plugin": "^2.30.1",
-    "webpack": "^3.8.1",
-    "jquery": "~3.2.1"
+    "jquery": "~3.2.1",
+    "style-loader": "^0.19.0",
+    "uikit": "^3.0.0-beta.35",
+    "webpack": "^3.8.1"
   }
 }
